--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3221,7 +3221,7 @@ span {
 
 /* 15.Contact */
 /*----------------------------------------------
-    # Contact Us  style here
+    # Admin Page  style here
 ----------------------------------------------*/
 .contact-info h2 {
   color: var(--title);
