comment from @praveen-to-change-theme

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,8 +49,8 @@ Description: Charityow - Charity & Donation Html Template
   --body: #fff;
   --black: #000;
   --white: #fff;
-  --theme: #c79321;
-  --theme2: #C8F168;
+  --theme: #ca8b63;
+  --theme2: #9fbd58;
   --header: #241442;
   --title: #111111;
   --orange: #F74F22;
